--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Cython==0.24.1
 Kivy==1.9.1
 Kivy-Garden==0.1.4
+Pillow==3.3.0
+PyPDF2==1.26.0
 PySDL2==0.9.4
 pygame==1.9.2b1
+reportlab==3.3.0
 requests==2.10.0
