--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+click==6.7
 Cython==0.24.1
+Flask==0.12.1
+itsdangerous==0.24
+Jinja2==2.9.6
 Kivy==1.9.1
 Kivy-Garden==0.1.4
-Pillow==3.3.0
+MarkupSafe==1.0
+Pillow==3.4.2
+pygame==1.9.2b1
 PyPDF2==1.26.0
 PySDL2==0.9.4
-pygame==1.9.2b1
 reportlab==3.3.0
 requests==2.10.0
+Werkzeug==0.12.1
